增加了GreenDAO 的多种条件查询，外加引入Material Design 设计风格

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         </activity>
         <activity android:name=".login.view.LoginAty" />
         <activity android:name=".update.view.UpdateInfoAty" />
-        <activity android:name=".delete.view.DeleteAty"></activity>
+        <activity android:name=".delete.view.DeleteAty" />
+        <activity android:name=".query.view.QueryAty"></activity>
     </application>
 
 </manifest>
