解决了GreenDAO ID 自增的问题，在插入值时，自增的ID 值必须传null

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,10 @@
         <activity android:name=".delete.view.DeleteAty" />
         <activity android:name=".query.view.QueryAty" />
         <activity android:name=".network.view.NetworkAty" />
-        <activity android:name=".base.PermissionsActivity"></activity>
+        <activity android:name=".base.PermissionsActivity" />
+        <activity android:name=".tinypng.TinyPngTest" />
+        <activity android:name=".tinypng.TinyPngTest2" />
+        <activity android:name=".labelmanager.view.AddLabelAty"></activity>
     </application>
 
 </manifest>
