解决了数据升级问题，在更新数据库结构时，数据不被修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
         <activity android:name=".base.PermissionsActivity" />
         <activity android:name=".tinypng.TinyPngTest" />
         <activity android:name=".tinypng.TinyPngTest2" />
-        <activity android:name=".labelmanager.view.AddLabelAty"></activity>
+        <activity android:name=".labelmanager.view.AddLabelAty" />
+        <activity android:name=".savepicture.view.UserIconAty" />
+        <activity android:name=".savepicture.view.QueryIconAty"></activity>
     </application>
 
 </manifest>
