--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
         }
     }
     greendao {
-        schemaVersion 1 //数据库版本号
+        schemaVersion 2//数据库版本号
         daoPackage 'com.com.raymond.downloader.greendao' //设置DaoMaster、DaoSession、Dao包名
         targetGenDir 'src/main/java' //设置DaoMaster、DaoSession、Dao目录
     }
@@ -61,6 +61,7 @@ dependencies {
     //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
     //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
+    compile 'com.github.yuweiguocn:GreenDaoUpgradeHelper:v2.0.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
