--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
         }
     }
     greendao {
-        schemaVersion 2//数据库版本号
+        schemaVersion 1//数据库版本号
         daoPackage 'com.com.raymond.downloader.greendao' //设置DaoMaster、DaoSession、Dao包名
         targetGenDir 'src/main/java' //设置DaoMaster、DaoSession、Dao目录
     }
@@ -46,7 +46,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'org.greenrobot:greendao:3.2.2'
-    implementation 'com.jakewharton:butterknife:8.4.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -58,6 +57,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.tencent.bugly:crashreport:latest.release'
+    implementation 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
     //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
