--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,19 +17,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/AppTheme">
         <activity android:name=".register.view.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".login.view.LoginAty" />
         <activity android:name=".update.view.UpdateInfoAty" />
         <activity android:name=".delete.view.DeleteAty" />
-        <activity android:name=".query.view.QueryAty"
-            />
+        <activity android:name=".query.view.QueryAty" />
         <activity android:name=".network.view.NetworkAty" />
         <activity android:name=".base.PermissionsActivity" />
         <activity android:name=".tinypng.TinyPngTest" />
@@ -37,7 +32,19 @@
         <activity android:name=".labelmanager.view.AddLabelAty" />
         <activity android:name=".savepicture.view.UserIconAty" />
         <activity android:name=".savepicture.view.QueryIconAty" />
-        <activity android:name=".userdetail.view.UserDetailAty"></activity>
+        <activity android:name=".userdetail.view.UserDetailAty" />
+        <activity android:name=".searchbar.SearchVeiwAAty"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".searchbar.SearchViewBActivity">
+
+
+        </activity>
     </application>
 
 </manifest>
