--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,7 @@
         <activity android:name=".savepicture.view.UserIconAty" />
         <activity android:name=".savepicture.view.QueryIconAty" />
         <activity android:name=".userdetail.view.UserDetailAty" />
-        <activity android:name=".searchbar.SearchVeiwAAty"
-            >
+        <activity android:name=".searchbar.SearchVeiwAAty">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
