本来想添加bugly 的热更新功能，当时Android studio 3.0.1 不支持，暂且保留文件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,13 +34,15 @@
         <activity android:name=".savepicture.view.QueryIconAty" />
         <activity android:name=".userdetail.view.UserDetailAty" />
         <activity android:name=".searchbar.SearchVeiwAAty"></activity>
-        <activity android:name=".searchbar.SearchViewBActivity"></activity>
-        <activity android:name=".tablayout.view.TestTablayout">
+        <activity android:name=".searchbar.SearchViewBActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".tablayout.view.TestTablayout">
+
         </activity>
     </application>
 
