--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'org.greenrobot.greendao' // apply plugin
 //apply plugin: 'com.android.library'
 apply plugin: 'com.jakewharton.butterknife'
 
+// 依赖插件脚本
+//apply from: 'tinker-support.gradle'
+
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -60,6 +63,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.5.1'
     implementation 'com.android.support:support-v4:26.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+//    compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
     //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
     //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
