--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".register.view.MainActivity">
-
-        </activity>
+        <activity android:name=".register.view.MainActivity"></activity>
         <activity android:name=".login.view.LoginAty" />
         <activity android:name=".update.view.UpdateInfoAty" />
         <activity android:name=".delete.view.DeleteAty" />
@@ -33,7 +31,7 @@
         <activity android:name=".savepicture.view.UserIconAty" />
         <activity android:name=".savepicture.view.QueryIconAty" />
         <activity android:name=".userdetail.view.UserDetailAty" />
-        <activity android:name=".searchbar.SearchVeiwAAty"></activity>
+        <activity android:name=".searchbar.SearchVeiwAAty" />
         <activity android:name=".searchbar.SearchViewBActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,9 +39,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".tablayout.view.TestTablayout">
-
-        </activity>
+        <activity android:name=".tablayout.view.TestTablayout"></activity>
+        <activity android:name=".talk.view.TalkAct"></activity>
     </application>
 
 </manifest>
